--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Rocky-Mountain-Oils-4/">https://chris-kherk.github.io/Rocky-Mountain-Oils-4/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-4/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-4/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-4/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-4/index.html</a><br>
+                <a target="_bLank" href="https://exquisite-fenglisu-202304.netlify.app">https://exquisite-fenglisu-202304.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
